# pctx-py-sandbox

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: README.md  WORKFLOWS.md  validate-workflows.sh
.github/workflows/: benchmark.yml  dependencies.yml  docs.yml  pre-commit.yml  publish.yml  test.yml
benchmarks/: __init__.py  run_benchmarks.py
examples/: basic_example.py
scripts/: debug_first_startup.py  debug_pool_usage.py  debug_simple_load.py  debug_socket_binding.py  debug_worker_lifecycle.py  install-linux-deps.sh  measure_actual_timing.py  profile_bottlenecks.py  start_agent.sh
src/pctx_sandbox/: __init__.py  client.py  decorator.py  exceptions.py
src/pctx_sandbox/agent/: README.md  nsjail.cfg  pool.py  simple_agent.py  worker.py
src/pctx_sandbox/platform/: Dockerfile.agent  __init__.py  lima-config.yaml  lima.py  native.py  podman.py  wsl2.py
tests/: conftest.py
tests/integration/: __init__.py  test_decorator_integration.py
tests/load/: test_concurrent_load.py
tests/security/: __init__.py  test_isolation_mechanisms.py  test_sandbox_security.py
tests/unit/: __init__.py  test_client.py  test_decorator.py  test_exceptions.py  test_platform.py
tests/unit/platform/: __init__.py  test_lima.py  test_native.py  test_podman.py
